# JMEngine

./: .gitignore  CMakeLists.txt  JMEngine.cpp  README.md
cmake/: ShaderCompile.cmake  complie_shader.py
engine/: CMakeLists.txt  JMEngine.cpp  JMEngine.h
engine/shader/: CMakeLists.txt
engine/shader/glsl/: test.vert
engine/shader/glsl/compile/: test.vert.spv
engine/source/: CMakeLists.txt  log_system.cpp  log_system.h  vulkan_rhi.cpp  vulkan_rhi.h  window_system.cpp  window_system.h
engine/source/global/: asset_manager.cpp  asset_manager.h  log_system.cpp  macro.h
